# budgething-v2

./: .gitignore  README.md  main.py  pyproject.toml
data/pickles/: transactions.pkl
docs/: .$flowchart.drawio.bkp  .$flowchart.drawio.dtmp  flowchart.drawio
src/budgething/: config.py  runner.py
src/budgething/data_io/: base.py  csv_data_reader.py
src/budgething/pipeline/: _logging.py  io.py  models.py  runner.py
src/budgething/pipeline/parsers/: __init__.py  helpers.py  pekao24.py  registry.py  revolut.py
src/budgething/pipeline/process/: eod_balance.py
src/budgething/pipeline/transform/: amount.py  balance.py  currency.py  date.py  enrichment.py  maps.py
src/budgething/utils/: dataframe_helpers.py
tests/: conftest.py
tests/acceptance/: test_csv_to_pkl_etl.py
tests/resources/acceptance/sample_csv_statements/: result.csv
tests/resources/acceptance/sample_csv_statements/input/: pekao24-sample_2025-03-29_2025-05-01.csv  revolut-gbp-sample_2024-04-30_2024-05-07.csv
tests/unit/bank_statement_parser/: test_map_pekao24_data.py  test_map_revolut_data.py  test_mappers_helper_functions.py  test_registration_and_fetching_logic.py
tests/unit/data_io/: test_csv_data_reader.py
tests/unit/pipeline/io/: test_get_csv_filepaths.py
tests/unit/pipeline/transform/: test_enrichment.py
tests/unit/pipeline/transform/maps/: test_from_revolut_data.py  test_helper_functions.py  test_map_pekao24_data.py
