[project]
name = "budgething"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "faker>=37.1.0",
    "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
